; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_server/extr_eap_server_peap.c_eap_peap_get_session_id.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_server/extr_eap_server_peap.c_eap_peap_get_session_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.eap_sm = type { i32 }
%struct.eap_peap_data = type { i64, i32 }

@SUCCESS = common dso_local global i64 0, align 8
@EAP_TYPE_PEAP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.eap_sm*, i8*, i64*)* @eap_peap_get_session_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @eap_peap_get_session_id(%struct.eap_sm* %0, i8* %1, i64* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.eap_sm*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca %struct.eap_peap_data*, align 8
  store %struct.eap_sm* %0, %struct.eap_sm** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64* %2, i64** %7, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = bitcast i8* %9 to %struct.eap_peap_data*
  store %struct.eap_peap_data* %10, %struct.eap_peap_data** %8, align 8
  %11 = load %struct.eap_peap_data*, %struct.eap_peap_data** %8, align 8
  %12 = getelementptr inbounds %struct.eap_peap_data, %struct.eap_peap_data* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @SUCCESS, align 8
  %15 = icmp ne i64 %13, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  br label %24

17:                                               ; preds = %3
  %18 = load %struct.eap_sm*, %struct.eap_sm** %5, align 8
  %19 = load %struct.eap_peap_data*, %struct.eap_peap_data** %8, align 8
  %20 = getelementptr inbounds %struct.eap_peap_data, %struct.eap_peap_data* %19, i32 0, i32 1
  %21 = load i32, i32* @EAP_TYPE_PEAP, align 4
  %22 = load i64*, i64** %7, align 8
  %23 = call i32* @eap_server_tls_derive_session_id(%struct.eap_sm* %18, i32* %20, i32 %21, i64* %22)
  store i32* %23, i32** %4, align 8
  br label %24

24:                                               ; preds = %17, %16
  %25 = load i32*, i32** %4, align 8
  ret i32* %25
}

declare dso_local i32* @eap_server_tls_derive_session_id(%struct.eap_sm*, i32*, i32, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
